--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,592 @@
-body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, sans-serif;
+<style>
+
+    @keyframes slideFadeIn {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
+@keyframes animatedBackground {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+body {
+  /* Define a gradient background with two or more colors */
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+
+  /* Animate the gradient */
+  background-size: 400% 400%;
+  animation: animatedBackground 15s ease infinite;
+}
+@keyframes popIn {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.profile-picture {
+  animation: popIn 1.5s ease-out forwards;
+}
+
+.profile-picture, .w3-jumbo, .available {
+  animation: slideFadeIn 1s ease-out;
+}
+body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+
+/* Static top center menu bar */
+.top-menu {
+  display: flex; /* Use flexbox for layout */
+  justify-content: center; /* Center items horizontally */
+  align-items: center; /* Center items vertically */
+  position: fixed;
+  top: 0;
+  left: 0; /* Adjusted for full width */
+  right: 0; /* Ensures the menu extends fully across the top */
+  background-color: white; /* Light background for a clean look */
+  padding: 10px;
+  width: 100%; /* Full width */
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Soft shadow for depth */
+  z-index: 1000; /* Ensure it's above other content */
+}
+
+body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            text-align: center;
+            background-color: #f2f2f2;
+        }
+        .profile-picture {
+            margin-top: 50px;
+            border-radius: 50%;
+            width: 300px;
+            height: 300px;
+            background-size: cover;
+            background-position: center;
+            display: inline-block;
+            background-image: url('C:\\Users\\emuru\\Downloads\\rakesh-emuru-photo.png'); /* Add your image path here */
+        }
+        .typewriter h1 {
+            overflow: hidden;
+            border-right: .15em solid #333;
+            white-space: nowrap;
+            margin: 0 auto;
+            letter-spacing: .15em;
+            animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
+        }
+        /* Typing keyframes */
+        @keyframes typing {
+            from { width: 0 }
+            to { width: 100% }
+        }
+        /* Cursor keyframes */
+        @keyframes blink-caret {
+            from, to { border-color: transparent }
+            50% { border-color: #333 }
+        }
+
+/* Style for menu items */
+.top-menu a {
+  color: cadetblue; /* Stylish, subdued color for the text */
+  text-decoration: none;
+  margin: 0 15px; /* Adjust margin for even spacing around items */
+  padding: 10px 15px; /* Slightly larger padding for easier clickability */
+  border-radius: 5px; /* Rounded corners for a modern appearance */
+  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+}
+
+/* Style for hover effect */
+.top-menu a:hover {
+  background-color: #007bff; /* Brighter color for hover for contrast */
+  color: white; /* White text for readability on hover */
+}
+
+/* Header/Home */
 header {
-    background-color: #333;
+  color: #333;
 }
 
-#navbar ul {
-    list-style-type: none;
-    padding: 0;
+.header-title {
+  cursor: pointer;
+}
+/* About Section */
+#about {
+  background-color: #fff;
+  color: #333;
+  width: 60%; /* or any other value you prefer */
+}
+
+/* Portfolio Section */
+#photos {
+  background-color: #f1f1f1;
+  color: #333;
+}
+
+/* Contact Section */
+#contact {
+  background-color: #fff;
+  color: #333;
+}
+
+/* Footer */
+footer {
+  background-color: #333;
+  color: #fff;
+}
+
+
+<!--for the skills and about me section-->
+ body {
+    font-family: 'Arial', sans-serif;
     margin: 0;
-    overflow: hidden;
-    background-color: #333;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    justify-content: space-around;
+  }
+  .section {
+    padding: 20px;
+    flex-basis: 60%; /* Reduced from 45% to make it narrower */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    background: #fff;
+  }
+  @media (max-width: 800px) {
+    .section {
+      flex-basis: 100%;
+    }
+  }
+
+  .about-section {
+    font-family: Arial, sans-serif;
+    max-width: 800px;
+    margin: auto;
+    padding: 20px;
+    color: #333;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  }
+  .about-section h2 {
+    color: #007bff;
+  }
+  .about-section p {
+    text-align: justify;
+    line-height: 1.6;
+  }
+  .highlight {
+    color: #007bff;
+    font-weight: bold;
+  }
+
+  .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-gap: 20px;
+            padding: 20px;
+  }
+  .project-card {
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      padding: 15px;
+      transition: transform 0.2s;
+  }
+  .project-card:hover {
+      transform: scale(1.05);
+  }
+  .project-title {
+      color: #333;
+      font-weight: bold;
+      margin: 10px 0;
+  }
+  .project-description {
+      color: #666;
+  }
+  .project-category {
+      display: inline-block;
+      background-color: #007bff;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 50px;
+      font-size: 0.8em;
+      margin-top: 10px;
+  }
+    .projects-container {
+            padding: 20px;
+            max-width: 1200px; /* Control the max width of the grid */
+            margin: auto; /* This centers the container */
+    }
+
+    .project-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* Creates three columns */
+        grid-gap: 20px; /* Space between items */
+    }
+
+    .project {
+        background: #fff;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        padding: 20px;
+        margin: 20px 0;
+        transition: transform 0.3s ease-in-out;
+        height: 400px; /* Adjust based on your content */
+        position: relative; /* This is necessary for absolute positioning of children */
+    }
+
+    .project:hover {
+        transform: translateY(-5px); /* Subtle hover effect */
+    }
+
+    .project-category {
+        background-color: #007bff;
+        color: white;
+        border-radius: 20px;
+        display: inline-block;
+        padding: 5px 15px;
+        margin-bottom: 10px;
+        font-size: 14px;
+    }
+
+    .project-title {
+        margin: 10px 0;
+        color: #333;
+        font-size: 1.5em;
+    }
+
+    .project-description {
+        font-size: 14px;
+        color: #666;
+    }
+
+    @media (max-width: 1200px) {
+        .project-grid {
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Adjusts number of columns based on screen size */
+        }
+    }
+
+    .blogs-container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 20px;
+        }
+
+    .blog-title {
+        text-align: center;
+        margin-bottom: 1em;
+    }
+
+    .blog-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 20px;
+        margin-top: 20px;
+    }
+
+    .blog {
+        background: #fff;
+        border: 2px solid #e7e7e7;
+        border-radius: 8px;
+        padding: 15px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .blog:hover {
+        transform: translateY(-5px);
+    }
+
+    .blog-header {
+        background-color: #007bff;
+        color: white;
+        border-radius: 20px;
+        display: inline-block;
+        padding: 5px 15px;
+        margin-bottom: 10px;
+        font-size: 14px;
+    }
+
+    .blog-content {
+        font-size: 14px;
+        color: #333;
+        margin-bottom: 15px;
+    }
+
+    .blog-footer {
+        font-size: 12px;
+        color: #666;
+    }
+
+    @media (max-width: 1200px) {
+        .blog-grid {
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        }
+    }
+
+    /* Optional: Adding a little style for the "Read more" links */
+    .read-more {
+        color: #007bff;
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+    .contact-section {
+            background-color: #f8f8f8;
+            padding: 40px;
+            text-align: center;
+        }
+
+    .contact-title {
+        font-size: 2em;
+        color: #333;
+        margin-bottom: 20px;
+    }
+
+    .contact-item {
+        display: inline-block;
+        margin: 0 15px;
+        text-align: center;
+    }
+
+    .contact-icon {
+        display: block;
+        font-size: 2em;
+        margin-bottom: 5px;
+        color: #007bff;
+    }
+
+    .contact-text {
+        display: block;
+        color: #333;
+    }
+
+    .contact-link {
+        text-decoration: none;
+        color: inherit;
+    }
+    header {
+  min-height: 100vh;
+}
+.section#about {
+  clear: both;
+  margin-top: 50px; /* or however much space you need */
 }
 
-#navbar li {
-    float: left;
+    #about {
+        background-color: #dbe3cb;
+        color: #333;
+        padding: 40px;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        max-width: 800px;
+        margin: auto;
+        padding: 20px;
+    }
+
+    #about h2, #about h4 {
+        color: yellowgreen;
+        text-align: center;
+    }
+
+    #about hr {
+        border-color: yellowgreen;
+        margin-bottom: 20px;
+    }
+
+    #about p, #about ul {
+        text-align: justify;
+        line-height: 1.6;
+    }
+
+    #about li {
+        margin-bottom: 10px;
+    }
+
+    #about ul {
+        padding-left: 20px;
+    }
+
+    #about strong {
+        color: #555;
+    }
+
+    /* Inline CSS does not support pseudo-classes like :hover. */
+    /* JavaScript will be used for interactive effects. */
+
+.projects-container {
+    max-width: 1200px;
+    margin: 40px auto;
+    padding: 20px;
 }
 
-#navbar li a {
+.project-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+}
+
+.project-card:hover {
+    box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+}
+
+.project-image {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+}
+
+.project-title {
+    color: #333;
+    padding: 15px;
+    margin: 0;
+}
+
+.project-tags {
+    padding: 0 15px 15px;
+}
+
+.tag {
+    display: inline-block;
+    background-color: #007bff;
+    color: white;
+    padding: 5px 10px;
+    margin-right: 5px;
+    border-radius: 5px;
+    font-size: 0.8em;
+}
+
+.project-description {
+    padding: 0 15px 15px;
+    color: #666;
+}
+
+.project-info-btn {
     display: block;
+    width: 100%;
+    padding: 15px;
+    background-color: #23a6d5;
     color: white;
     text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
+    border-radius: 0 0 10px 10px;
 }
 
-#navbar li a:hover {
-    background-color: #ddd;
-    color: black;
+.project-info-btn:hover {
+    background-color: #1d8ab7;
+    color: #fff;
 }
 
-#main-content {
-    text-align: center;
-    padding: 50px;
-    background-color: #f4f4f4; /* Change this to any color you like */
-    color: black; /* Change text color as needed */
-    height: calc(100% - 56px); /* Adjust height considering the header */
+.skills-section {
+    margin-top: 40px; /* Adds space above the section */
+    margin-bottom: 40px; /* Adds space below the section */
+  }
+
+.text-color-1 { color: #FF0000; /* Red */ font-weight: bold; }
+.text-color-2 { color: #00FF00; /* Green */ font-weight: bold; }
+.text-color-3 { color: #0000FF; /* Blue */ font-weight: bold; }
+
+.icon-bar {
+  display: flex;
+  justify-content: center; /* Center the buttons horizontally */
+  gap: 100px; /* Adjust the gap between the buttons */
+  padding-top: 20px; /* Add space from the top */
+  margin-top: 150px;
+}
+
+.icon-button {
+  background-color: #6e5494; /* GitHub color */
+  color: white;
+  padding: 10px 20px; /* Adjust padding as needed */
+  text-decoration: none;
+  border-radius: 5px;
+  display: inline-flex; /* Use inline-flex for proper alignment */
+  align-items: center;
+  transition: background-color 0.3s;
+  font-size: 16px;
+}
+
+.icon-button.github {
+  background-color: #6e5494; /* Or any other color you prefer for GitHub */
+}
+
+.icon-button.resume {
+  background-color: #28a745; /* Or any other color you prefer for Resume */
+}
+
+.icon-button i {
+  margin-right: 8px;
+}
+
+.icon-button:hover {
+  background-color: #555; /* Hover effect */
+}
+
+<!--project -->
+/* The container of the flip cards needs perspective */
+.projects-container {
+  perspective: 1000px;
+  margin: 40px auto;
+  padding: 20px;
+}
+/* The flip container and its nested elements */
+.flip-container {
+    cursor: pointer;
+}
+
+.flipper {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.front, .back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
+    flex-direction: column;
+    padding: 20px;
 }
 
-h1 {
-    margin: 0 0 10px 0;
-    color: #333;
-    font-size: 2.5em; /* Adjust size as needed */
+.front {
+    z-index: 2;
 }
 
-p {
-    font-size: 1.2em; /* Adjust size as needed */
+.back {
+    transform: rotateY(180deg);
+    z-index: 1;
 }
+
+/* Handle the flip on hover */
+.flip-container:hover .flipper {
+    transform: rotateY(180deg);
+}
+    </style>
