--- a/rakesh_portfolio_styles.css
+++ b/rakesh_portfolio_styles.css
@@ -77,7 +77,7 @@ body {
             background-size: cover;
             background-position: center;
             display: inline-block;
-            background-image: url('C:\\Users\\emuru\\Downloads\\rakesh-emuru-photo.png');
+            background-image: url('Images/rakesh-emuru-photo.png');
         }
         .typewriter h1 {
             overflow: hidden;
