--- a/rakesh_portfolio_styles.css
+++ b/rakesh_portfolio_styles.css
@@ -193,10 +193,12 @@ footer {
         content: '✔'; /* Unicode for heavy check mark */
         color: green;
         position: absolute;
+        padding-left: 40px;
         left: 0;
         top: 0; /* Adjust if necessary to center the check mark vertically */
         font-size: 24px; /* Larger font size for bigger check mark */
     }
+
   .about-section {
     font-family: Arial, sans-serif;
     max-width: 800px;
